[gd_scene load_steps=5 format=2]

[ext_resource path="res://firework.gd" type="Script" id=1]
[ext_resource path="res://assets/images/firework.png" type="Texture" id=2]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 0.750977, 0.00390625, 1, 1, 0.246338, 0.015625, 1 )

[node name="firework" type="Node2D"]
script = ExtResource( 1 )

[node name="Trail" type="CPUParticles2D" parent="."]
emitting = false
amount = 125
lifetime = 0.1
randomness = 1.0
local_coords = false
texture = ExtResource( 2 )
emission_shape = 1
emission_sphere_radius = 4.0
spread = 180.0
flatness = 1.0
gravity = Vector2( 0, 98 )
initial_velocity = 10.0
angular_velocity = 90.0
angular_velocity_random = 1.0
linear_accel = 100.0
linear_accel_random = 1.0
radial_accel = 10.0
damping = 100.0
angle = 180.0
angle_random = 1.0
scale_amount = 0.5
scale_amount_random = 1.0

[node name="Explosion" type="CPUParticles2D" parent="."]
material = SubResource( 1 )
emitting = false
amount = 150
lifetime = 3.0
speed_scale = 1.3
explosiveness = 0.9
randomness = 1.0
local_coords = false
texture = ExtResource( 2 )
emission_shape = 1
emission_sphere_radius = 20.0
spread = 180.0
flatness = 1.0
gravity = Vector2( 0, 98 )
initial_velocity = 500.0
angular_velocity = 90.0
angular_velocity_random = 1.0
linear_accel = 100.0
linear_accel_random = 1.0
radial_accel = 10.0
damping = 100.0
damping_random = 1.0
angle = 180.0
angle_random = 1.0
scale_amount = 0.5
scale_amount_random = 1.0
color_ramp = SubResource( 2 )
anim_offset = 1.0
anim_offset_random = 1.0

[node name="CreationTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="InitTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="CreationTimer" to="." method="_on_CreationTimer_timeout"]
[connection signal="timeout" from="InitTimer" to="." method="_on_InitTimer_timeout"]
